--- a/componentes-01/package.json
+++ b/componentes-01/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
